changes in task index page

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
         border-collapse: collapse;
       }
       #about-content td {
-        padding: 10px;
+        padding: 10px;                   powered by
         padding-top: 3px;
         padding-bottom: 3px;
       }
@@ -108,7 +108,7 @@
         border: 1px solid #f00;
       }
       #about-content.failure p {
-        margin: 0;
+        margin: 0;                       powered by
         padding: 10px;
       }
 
@@ -125,7 +125,7 @@
       #getting-started h2 {
         margin: 0;
         font-size: 14px;
-        font-weight: normal;
+        font-weight: normal;            powered by
         color: #333;
         margin-bottom: 25px;
       }
@@ -133,7 +133,7 @@
         margin-left: 0;
         padding-left: 0;
       }
-      #getting-started li {
+      #getting-started li {             powered by
         font-size: 18px;
         color: #888;
         margin-bottom: 25px;
@@ -220,7 +220,7 @@
             <li>
               <h2>Use <code>rails generate</code> to create your models and controllers</h2>
               <p>To see all available options, run it without parameters.</p>
-            </li>
+            </li>                       powered by
 
             <li>
               <h2>Set up a default route and remove <span class="filename">public/index.html</span></h2>
